tests/ui/coercion/issue-26905.stderr
error[E0375]: implementing `CoerceUnsized` does not allow multiple fields to be coerced
  --> $DIR/issue-26905.rs:18:23
   |
LL | impl<T: Unsize<U>, U> CoerceUnsized<MyRc<U>> for MyRc<T>{ }
   |                       ^^^^^^^^^^^^^^^^^^^^^^
   |
note: the trait `CoerceUnsized` may only be implemented when a single field is being coerced
  --> $DIR/issue-26905.rs:14:5
   |
LL |     _ptr: *const T,
   |     ^^^^^^^^^^^^^^
LL |     _boo: NotPhantomData<T>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0375`.
